kustomize/uat/route-patch.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tinydemo
spec:
  host: tinydemo-uat-demo.apps.ocpuat.interconnect.systems
